--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     display: flex;
     justify-content: space-around;
     list-style: none;
+    grid-template-columns: repeat(320px, 1fr);
 }
 
 a {
@@ -34,11 +35,15 @@ a {
     width: 80%;
     margin-bottom: 20px;
     margin-left: 200px;
+    flex-wrap: wrap;
+    min-width: 200px;
 }
 
 .images {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
+    min-width: 320px;
 }
 
 .image-1:hover {
@@ -60,6 +65,8 @@ a {
 .footer-container {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    min-width: 320px;
 }
 
 .footer-container {
@@ -67,6 +74,8 @@ a {
     display: grid;
     grid-template-columns: 60% 40%;
     grid-template-rows: repeat(2, 50px);
+    flex-wrap: wrap;
+    min-width: 320px;
 }
 
 .redes-content {
@@ -80,8 +89,10 @@ a {
 .eslogan1 {
     font-size: 24px;
     color: rgb(255, 255, 255);
-    margin-left: 400px;
     font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 320px;
 }
 
 .rules-container {
