--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ a {
     display: flex;
     flex-wrap: wrap;
     min-width: 320px;
+    justify-content: center;
 }
 
 .rules-container {
@@ -119,11 +120,27 @@ a {
     margin-left: 900px;
 }
 
+
 .lista-staff {
     list-style: none;
+    display: grid;
+    grid-template-columns: 25% 25%;
 }
 
-p{
+.campo-rellenar {
+    list-style: none;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(2, 60px);
+}
+
+p {
     color: white;
-    font-size: 20px
+    font-size: 25px
+}
+
+
+.image-staff:hover {
+    transform: scale(2) translateX(40px);
+    transition: all 1.5s ease;
 }
