--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a {
 .lista-staff {
     list-style: none;
     display: grid;
-    grid-template-columns: 25% 25%;
+    grid-template-columns: 25% 25% 25% 25%;
 }
 
 .campo-rellenar {
