--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a {
     color: black;
 }
 
-.Video {
+.video {
     width: 80%;
     margin-bottom: 20px;
     margin-left: 200px;
@@ -70,21 +70,56 @@ a {
     justify-content: center;
 }
 
-.rules-container {
-    display: grid;
-    grid-template-columns: 900px 900px;
-    grid-template-rows: repeat(4, 1060px);
+.rule-1 {
+    grid-area: r1
 }
 
-.ruler-content {
-    display: flex;
-    justify-self: center;
+.rule-2 {
+    grid-area: r2
+}
+
+.rule-3{
+    grid-area: r3
+}
+
+.rule-4 {
+    grid-area: r4;
+}
+
+.rule-5 {
+    grid-area: r5
+}
+
+.rule-6 {
+    grid-area: r6
+}
+
+.rule-7 {
+    grid-area: r7
+}
+
+.rule-8 {
+    grid-area: r8
 }
 
 .rule-9 {
-    margin-left: 900px;
+    grid-area: r9;
 }
 
+.rules-container {
+    display: grid;
+    grid-template-areas: "r1 r1"
+                         "r2 r2"
+                         "r3 r3"
+                         "r4 r4"
+                         "r5 r5"
+                         "r6 r6"
+                         "r7 r7"
+                         "r8 r8"
+                         "r9 r9";
+    row-gap: 20px;
+    justify-content: center;
+}
 
 .lista-staff {
     list-style: none;
@@ -110,7 +145,7 @@ p {
 }
 
 .img-whitelist:hover {
-    transform: scale(1) translateX(80px);
+    transform: scale(1.3) translateX(170px) translateY(80px);
     transition: all 1.5s ease;
 }
 
@@ -154,4 +189,10 @@ p {
     grid-template-areas: "foro1 foro1 foro1 twit"
                          "foro2 foro2 foro2 twit"
                          "foro3 foro3 foro3 twit";
+}
+
+@media screen and (max-width: 1000px){
+    .video-container {
+        display: none;
+    }
 }
