--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ a {
     list-style: none;
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: auto;
 }
 
 .campo-rellenar {
@@ -177,6 +178,17 @@ p {
     .sec-white {
         display: grid;
         grid-template-columns: auto;
+        grid-template-rows: auto;
+    }
+    .boton {
+        margin-top: 80px;
+    }
+}
+
+@media screen and (max-width: 500px){
+    .lista-staff{
+        display: grid;
+        grid-template-columns: 50% 50%;
         grid-template-rows: auto;
     }
 }
