Eliminado de animación y agregado de mediaq a eslogan

--- a/style.css
+++ b/style.css
@@ -160,11 +160,6 @@ p {
     margin-top: 100px;;
 }
 
-.text-right:hover {
-    transform: scale(1.2) translateX(-80px);
-    transition: all 1.5s ease;
-}
-
 @media screen and (max-width: 1000px){
     .video-container {
         display: none;
@@ -190,5 +185,8 @@ p {
         display: grid;
         grid-template-columns: 50% 50%;
         grid-template-rows: auto;
+    }
+    .eslogan1 {
+        display: none;
     }
 }
