--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,5 @@
+@import "components/footer";
+
 $color-principal: rgb(240, 145, 56);
 $color-secundario: rgb(243, 74, 201);
 
@@ -21,23 +23,6 @@ body {
         color: $color-principal;
         font-size: 24px;
         font-family: Arial, Helvetica, sans-serif;
-    }
-
-    .footer-container {
-        display: flex;
-        justify-content: space-between;
-        list-style: none;
-        display: grid;
-        grid-template-columns: 60% 40%;
-        grid-template-rows: repeat(2, 50px);
-
-        .redes-content {
-            list-style: none;
-            display: grid;
-            grid-template-columns: 50px 50px;
-            grid-template-rows: repeat(2, 1px);
-            column-gap: 40px;
-        }
     }
 }
 
