--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     column-gap: 40px; }
 
 body {
-  background-image: url(Imagenes/Background.jpg);
+  background-image: url(../Imagenes/Background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed; }
