--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -2,7 +2,7 @@
 @import "base/list";
 
 body {
-    background-image: url(Imagenes/Background.jpg);
+    background-image: url(../Imagenes/Background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
