--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -106,6 +106,11 @@ body {
     ;
 }
 
+.img-whitelist:hover {
+    transform: scale(1) translateX(50px);
+    transition: all 0.8s;
+}
+
 @media screen and (max-width: 1000px) {
     .video-container {
         display: none;
