cambio de tamaño de logo, hover del mismo eliminado y agregado de media a sección de whitelist

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -188,4 +188,12 @@ body {
     .eslogan1 {
         display: none;
     }
+
+    .text-wl{
+        font-size: 8px;
+    }
+
+    .img-whitelist {
+        width: 300px;
+    } 
 }
