--- a/css/style.css
+++ b/css/style.css
@@ -138,4 +138,8 @@ body {
     grid-template-columns: 50% 50%;
     grid-template-rows: auto; }
   .eslogan1 {
-    display: none; } }
+    display: none; }
+  .text-wl {
+    font-size: 8px; }
+  .img-whitelist {
+    width: 300px; } }
