--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
     grid-template-rows: repeat(2, 1px);
     column-gap: 40px; }
 
+.logo:hover {
+  transform: scale(1.5);
+  transition: all 1.5s ease; }
+
 body {
   background-image: url(../Imagenes/Background.jpg);
   background-repeat: no-repeat;
